# konnect-pretix

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: style.yml  tests.yml
pretixkonnect/: apps.py  models.py  payment.py  signals.py  urls.py  views.py
pretixkonnect/locale/de/LC_MESSAGES/: django.po
pretixkonnect/migrations/: 0001_initial.py
pretixkonnect/templates/pretixkonnect/: checkout_payment_confirm.html
